--- a/template/index.html
+++ b/template/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clipz Template</title>
+  <title>Magnetar Media</title>
 
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -115,13 +115,13 @@
   
           <!-- Heading -->
           <h2 class="text-3xl mb-2">
-            Game Highlighting Clip
+            Watch Magnetar Highlights
           </h2>
 
           <!-- Name & Date -->
           <p class="mb-0">
-            Luis Ramirez &#183; 
-            <span class="text-gray-400">March 31, 2020</span>
+            Genesis Domingo &#183; 
+            <span class="text-gray-400">February 20, 2025</span>
           </p>
   
         </div>
@@ -150,7 +150,7 @@
   
           <!-- Heading -->
           <h2 class="text-3xl mb-2">
-            Game Highlighting Clip
+            Highlighting Clip
           </h2>
 
           <!-- Name & Date -->
